--- a/_config.yml
+++ b/_config.yml
@@ -8,11 +8,11 @@
 
 # Basic Site Settings
 locale                   : "en-US"
-title                    : "Bio of Haoyu Dong"
+title                    : "Haoyu Dong"
 title_separator          : "-"
 name                     : &name "Haoyu Dong"
 description              : &description "Haoyu Dong is an undergraduate student at Tsinghua University, majoring in Electronic Engineering."
-url                      : https://fhyq-dong.github.io/academicpages.github.io/ # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io"
+url                      : "https://bio.fhyq.cloud" # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "fhyq-dong/academicpages.github.io"
 
@@ -27,7 +27,7 @@ author:
   bio              : # "Short biography for the left-hand sidebar"
   location         : "Beijing, China"
   employer         : "Tsinghua University"
-  uri              : "https://fhyq-dong.github.io/academicpages.github.io/"
+  uri              : "https://bio.fhyq.cloud"
   email            : "donghy23@mails.tsinghua.edu.cn" 
 
   # Academic websites
@@ -72,7 +72,7 @@ author:
   wikipedia        : # Username
   xing             : # Username
   youtube          : # Username
-  zhihu            : 风壑云泉 # Username
+  zhihu            : fhyq-dong # Username
 
 # Publication Category - The following the list of publication categories and their headings
 publication_category:
